--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html website templates</a></section><section class="cid-rQZVCjP8je mbr-parallax-background" id="header2-4">
+<section class="engine"><a href="https://mobirise.info/b">how to create your own site</a></section><section class="cid-rQZVCjP8je mbr-parallax-background" id="header2-4">
 
     
 
@@ -190,7 +190,7 @@
                     <div class="media-container-row">
                         <div class="col-md-12">
                             <div class="wrap-img ">
-                                <img src="assets/images/smarthub-logo-240x82.png" class="img-responsive clients-img" alt="" title="">
+                                <img src="assets/images/smarthub-logo-500x171.png" class="img-responsive clients-img" alt="" title="">
                             </div>
                         </div>
                     </div>
@@ -207,14 +207,6 @@
                         <div class="col-md-12">
                             <div class="wrap-img ">
                                 <img src="assets/images/fromms-1-820x312.png" class="img-responsive clients-img" alt="" title="">
-                            </div>
-                        </div>
-                    </div>
-                </div><div class="carousel-item ">
-                    <div class="media-container-row">
-                        <div class="col-md-12">
-                            <div class="wrap-img ">
-                                <img src="assets/images/heights-college-1378x551.jpg" class="img-responsive clients-img" alt="" title="">
                             </div>
                         </div>
                     </div>
@@ -311,7 +303,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJHQZ8RqIAw2sRMAAhf_HuAAU" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJHQZ8RqIAw2sRMAAhf_HuAAU" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <h2 class="pb-3 align-left mbr-fonts-style display-2">
@@ -332,7 +324,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1TAqql280qlFIMrrj1ckiqN28UZ0HnKMH19lhdkteWbwv5FQGUoWDc/OvQ01U0yk5bSzGF0KD+zBbtTvzYGHT5mdRbwjsfBtaXKKotSwflhZggag52PFCZOmgEkyQCi5">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gNV5obYN8+f/YO+RNKyELFVtn4eB9enYFNaPS5l5R4Fxmneuh5xJsVJRZraSkTzc0QCOq364y58k4p8e8V0GsvsvuTfoU2mPCgv2N6vjOImJMdwS2paSyUkcZYBsqSaQ">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
