--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-5" href="https://mobirise.co">
-                        ROCKHAMPTON T-SHIRT PRINTING</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-5" href="tel:0491147682">
+                        ROCKHAMPTON SHIRT PRINTING</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make your own website</a></section><section class="cid-rQZVCjP8je mbr-parallax-background" id="header2-4">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="cid-rQZVCjP8je mbr-parallax-background" id="header2-4">
 
     
 
@@ -157,7 +157,7 @@
         <div class="inner-container" style="width: 66%;">
             <hr class="line" style="width: 43%;">
             <div class="section-text align-center mbr-white mbr-fonts-style display-5">
-                    "Rockhampton T-Shirt printing were super easy to work with we selected premium finishes and got shirts that looked absolutely amazing"</div>
+                    "Rockhampton Shirt Printing were super easy to work with we selected premium finishes and got shirts that looked amazing"</div>
             <hr class="line" style="width: 43%;">
         </div>
     </div>
@@ -190,7 +190,7 @@
                     <div class="media-container-row">
                         <div class="col-md-12">
                             <div class="wrap-img ">
-                                <img src="assets/images/smarthub-logo-500x171.png" class="img-responsive clients-img" alt="" title="">
+                                <img src="assets/images/2018-02-smarthub-final-logo-stacked-1-680x407.jpg" class="img-responsive clients-img" alt="" title="">
                             </div>
                         </div>
                     </div>
@@ -303,7 +303,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJHQZ8RqIAw2sRMAAhf_HuAAU" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJHQZ8RqIAw2sRMAAhf_HuAAU" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <h2 class="pb-3 align-left mbr-fonts-style display-2">
@@ -319,12 +319,12 @@
                             Don't Hesitate to Contact us</h5>
                         <p class="mbr-text align-left mbr-fonts-style display-7">
                             Phone: 0491 147 682<br>
-                            Email: rockhamptontshirtprinting@gmail.com</p>
+                            Email: rockhamptonshirtprinting@gmail.com</p>
                     </div>
                 </div>
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="0oq8eqWPMFFU29pWFg72+BgXQBQ98jcWbE4/K/P9Sf93VcP+UX1h5yo7IiGIXddkVUH6tWNMV0GwAk5q5VNkszWqj/mQm1RmE8DCKI8Cgmj4vrPMgN8CNzBgQquzKGOP">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="55q9fS2ChdtNZjKSnhYh5KY18djCWkdWSp7+6KY4OwMjkH8tnu+/YK7SXHz8SoSiiepiNXF21SJdcvbo+oViwovwEJoDxHS5aCoNte7QQyHg9u+zeGfwgQA75ml+wBNT">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
