create github pages

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="cid-rQZVCjP8je mbr-parallax-background" id="header2-4">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="cid-rQZVCjP8je mbr-parallax-background" id="header2-4">
 
     
 
@@ -190,7 +190,7 @@
                     <div class="media-container-row">
                         <div class="col-md-12">
                             <div class="wrap-img ">
-                                <img src="assets/images/2018-02-smarthub-final-logo-stacked-1-680x407.jpg" class="img-responsive clients-img" alt="" title="">
+                                <img src="assets/images/smarthub-logo-500x171.png" class="img-responsive clients-img" alt="" title="">
                             </div>
                         </div>
                     </div>
@@ -324,7 +324,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="55q9fS2ChdtNZjKSnhYh5KY18djCWkdWSp7+6KY4OwMjkH8tnu+/YK7SXHz8SoSiiepiNXF21SJdcvbo+oViwovwEJoDxHS5aCoNte7QQyHg9u+zeGfwgQA75ml+wBNT">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="amhS2HqrsOTmk2M/0rSzPQvniFmKW+iNBmDAn14uzKuIv/Bk5hXot+ZGT/mQB9UFLG+S3TWpArrIwTuylO+GoDppj+iiwdpraY68HyM/uIKSKjX5wyMB8YW9qDgWnHsD">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
