create github pages

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="https://mobirise.co">
+                    <a class="nav-link link text-black display-4" href="index.html">
                         Home</a>
                 </li><li class="nav-item">
                     <a class="nav-link link text-black display-4" href="page1.html">
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="cid-rQZVCjP8je mbr-parallax-background" id="header2-4">
+<section class="engine"><a href="https://mobirise.info/z">best html templates</a></section><section class="cid-rQZVCjP8je mbr-parallax-background" id="header2-4">
 
     
 
@@ -302,7 +302,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJHQZ8RqIAw2sRMAAhf_HuAAU" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJHQZ8RqIAw2sRMAAhf_HuAAU" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <h2 class="pb-3 align-left mbr-fonts-style display-2">
@@ -323,7 +323,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="C3JwUBPOvmfWVeLSO4306sHM6fsGC/I8ukYgzNtq8ctlcoEmOK9umuZH8oLRqTvoKUeQ1ktG0Aqr9INhU3up7NAkoW75nX6v58+31GDmWisicJRhcBeE8eocbWmMSw8x">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="HyKnk6AmIzwbXUOzWjd5gFa8XQwWoeCVDZX8pceyN3JFh+SjtM+jjodXgUC4TeZm+QJjXtRvN8FGsUeAFsyPQN9/3344gM9gt0Et1XRZZaVd5EXoOy229OhA5Tc8D/zn">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
