--- a/index.html
+++ b/index.html
@@ -52,9 +52,8 @@
                     <a class="nav-link link text-black display-4" href="page1.html">
                         About Us
                     </a>
-                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobirise.co">
-                        Services
-                    </a></li></ul>
+                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="eventprinting.html">
+                        Event Printing</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-black-outline display-4" href="tel:0491147682">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
                     </span>0491 147 682</a></div>
@@ -62,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio website templates</a></section><section class="cid-rQZVCjP8je mbr-parallax-background" id="header2-4">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="cid-rQZVCjP8je mbr-parallax-background" id="header2-4">
 
     
 
@@ -133,7 +132,7 @@
                             <h3 class="count pt-3 pb-3 mbr-fonts-style display-5">
                                   Affordable Prices<br><br></h3>
                             
-                            <p class="mbr-content-text mbr-fonts-style display-7">We offer premium printing at a affordable and competive price.</p>
+                            <p class="mbr-content-text mbr-fonts-style display-7">We offer premium printing at a affordable and competitive price.</p>
                         </div>
                     </div>
                 </div>
@@ -331,7 +330,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="REyD5txtNRbQ3flqykZYRfeeq6wIkYr3tQHW7ltCv9vO5eiZ8jWY/6kcN7G9UDJzQSdvGQdC82YkeTEw3KupiP8Wu+uBk5Fo7B4JZdtnl2Xa1fb/mgdSd7Fzs88eXv7J">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="LRZBeTZHd0Md+4F2X+4hkbDenp27dmdqVNcl8yaWlQEevXDLhvsrtxTtOVxcZo+y3etdhRLLGyfmDrsK7qjJruVj9Yr8JastXJ0UZLBfvCKVDIhbgEbdWueHKLos5xb1">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
