--- a/printing.html
+++ b/printing.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="cid-rSCahGNnCC mbr-fullscreen mbr-parallax-background" id="header2-t">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own website</a></section><section class="cid-rSCahGNnCC mbr-fullscreen mbr-parallax-background" id="header2-t">
 
     
 
@@ -70,7 +70,7 @@
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">
-                    EVENT PRINTING</h1>
+                    EVENT OR WORK PRINTING</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">We print shirts for everthing from events like bucks parties, family reunions, 18ths and 21st to professional events. &nbsp;Contact us today to see how we can bring your <br>dream design&nbsp;to life.</p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-info display-4" href="https://mobirise.co">Contact Us</a></div>
